open-policy-agent/open-policy-agent/policy/gen-required-probes/samples/must-have-probes/example_allowed2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: azure-keyvault
spec:
  containers:
  - name: nginx-1
    image: escoacrprod01.azurecr.io/esco/spvest/azure-keyvault-env:1.3.0
    ports:
    - containerPort: 80
    readinessProbe:
     httpGet:
       path: /
       port: 80
     initialDelaySeconds: 5
     periodSeconds: 10
    livenessProbe:
      tcpSocket:
        port: 80
      initialDelaySeconds: 5
      periodSeconds: 10
    volumeMounts:
    - mountPath: /tmp/cache
      name: cache-volume
  - name: istio-proxy
    image: escoacrprod01.azurecr.io/esco/istio/proxyv2:1.9.8
    ports:
    - containerPort: 8080
    readinessProbe:
      tcpSocket:
        port: 8080
      initialDelaySeconds: 5
      periodSeconds: 10
    # livenessProbe:
    #   tcpSocket:
    #     port: 8080
    #   initialDelaySeconds: 5
    #   periodSeconds: 10
  volumes:
  - name: cache-volume
    emptyDir: {}
